[tool.poetry]
name = "py16web-hw09"
version = "0.1.0"
description = ""
authors = ["djmary-k <kondratyukmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
itemadapter = "^0.8.0"
scrapy = "^2.11.0"
bson = "^0.5.10"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
